<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Open Sudoku</string>
    <string name="edit">Edit</string>
    <string name="edit_puzzle">Edit puzzle</string>
    <string name="version">Open Sudoku v.%s</string>
    <string name="homepage" translatable="false">https://opensudoku.moire.org/</string>
    <string name="homepage_introduction">More information (including how to report ideas and issues) can be found on the project\'s home page:</string>
    <string name="current_developers_label">Open Sudoku Author (since v.4)</string>
    <string name="current_developers" translatable="false">Bart Uliasz
    </string>
    <string name="old_developers_label">Previous Authors</string>
    <string name="old_developers" translatable="false">
        Óscar García Amor\n
        Roman Mašek
    </string>
    <string name="localization_contributors_label">Localization Contributors</string>
    <string name="localization_contributors" translatable="false">
        anenasa\n
        தமிழ்நேரம் (anishprabu.t)\n
        Bart Uliasz\n
        ceskyDJ\n
        Diego Pierotto\n
        Ettore Atalan\n
        fabpolli\n
        gallegonovato\n
        Gokay Can Kayki\n
        Jens Persson\n
        Joaquim Pedroto Costa\n
        Joonas Reinholm\n
        kaajjo\n
        madcrow\n
        Martin Helff\n
        Martin Sobola\n
        Oğuz Ersen\n
        ONE (LonelyChinaDay)n
        Óscar García Amor\n
        Paulo Schopf\n
        Poesty Li\n
        Rainer Popella\n
        tetify\n
        Tubix\n
        Vit Hnilica\n
        Xavier FORESTIER\n
    </string>
    <string name="close">Close</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="get_more_puzzles_online">Get more puzzles online</string>
    <string name="name">Name:</string>
    <string name="note">Note:</string>
    <string name="edit_note">Edit note</string>
    <string name="add_folder">Add folder</string>
    <string name="about">About</string>
    <string name="error">Error</string>
    <string name="rename_folder">Rename folder</string>
    <string name="delete_folder">Delete folder</string>
    <string name="rename_folder_title">Rename %s</string>
    <string name="delete_folder_title">Delete %s</string>
    <string name="delete_folder_confirm">Are you sure you want to delete this folder?</string>
    <plurals name="n_puzzles">
        <item quantity="one">One puzzle</item>
        <item quantity="other">%d puzzles</item>
    </plurals>
    <string name="all_solved">all solved</string>
    <string name="n_unsolved" tools:ignore="PluralsCandidate">%d unsolved</string>
    <string name="n_playing" tools:ignore="PluralsCandidate">%d playing</string>
    <string name="solved">Solved</string>
    <string name="playing">Playing</string>
    <string name="with_mistakes">With mistakes</string>
    <string name="with_hints">With hints</string>
    <string name="unsolved">Unsolved</string>
    <string name="not_started">Not started</string>
    <string name="last_played_at">Last played %s</string>
    <string name="created_at">Created %s</string>
    <string name="today_at_time">today at %s</string>
    <string name="yesterday_at_time">yesterday at %s</string>
    <string name="on_date">on %s</string>
    <string name="add_puzzle">Add puzzle</string>
    <string name="filter">Filter</string>
    <string name="filter_by_game_state">Show only any of</string>
    <string name="filter_and_also">And only</string>
    <string name="folders">Folders</string>
    <string name="delete_puzzle_confirm">Are you sure you want to delete selected puzzle?</string>
    <string name="reset_puzzle_confirm">Are you sure you want to reset selected puzzle?</string>
    <string name="reset_puzzle">Reset puzzle</string>
    <string name="delete_puzzle">Delete puzzle</string>
    <string name="filter_active">Showing only: %s</string>
    <string name="undo">Undo</string>
    <string name="clear_all_marks">Clear all pencil marks</string>
    <string name="fill_in_valid_marks">Fill in valid primary marks</string>
    <string name="fill_in_valid_marks_option">\"Fill in valid primary marks\" menu option</string>
    <string name="restart">Restart</string>
    <string name="congrats">Congratulations, you have solved the puzzle!</string>
    <string name="congrats_duration">\nDuration: %s</string>
    <string name="congrats_mistakes">\nMistake count: %d</string>
    <string name="congrats_hints">\nHint usage: %d points</string>
    <string name="restart_confirm">Are you sure you want to restart this game?</string>
    <string name="settings">Settings</string>
    <string name="experimental_features">Experimental Features</string>
    <string name="experimental_features_summary">Enable experimental features that are not fully tested or still in development</string>
    <string name="board_view_settings">Sudoku Board View Settings</string>
    <string name="highlight_wrong_values_summary">Highlight cells with incorrect value entries (pencil marks are ignored)</string>
    <string name="input_methods">Input Settings</string>
    <string name="move_right_on_insert">Move right on value insert</string>
    <string name="move_right_on_insert_summary">Moves selection by one cell to the right when a value is applied.</string>
    <string name="game">Other Game Settings</string>
    <string name="show_hints">First launch hints</string>
    <string name="show_hints_summary">Show hints that guide you through application controls.</string>
    <string name="show_time">Show time</string>
    <string name="show_time_summary">Show time during solving the puzzle.</string>
    <string name="screen_border_size">Screen border size</string>
    <string name="screen_border_size_summary">Some displays do not react to touches on screen edges. This should help in such cases.</string>
    <string name="highlight_touched_cell">Highlight cells on touch</string>
    <string name="highlight_touched_cell_summary">Highlights row and column of touched cell.</string>
    <string name="highlight_completed_values">Highlight completed numbers</string>
    <string name="highlight_completed_values_summary">Highlight buttons for numbers which have been entered 9 times. Also blink the numbers on the board.</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="show_number_totals">Show Number Totals</string>
    <string name="show_number_totals_summary">Displays count of each number placed on the keyboard.</string>
    <string name="enable_double_marks">Double Pencil Marks</string>
    <string name="enable_double_marks_summary">Enables two types of pencil marks: Central (as primary) and a secondary (Corner or Positional).</string>
    <string name="fill_in_valid_marks_summary">“Fill in valid primary marks” menu item will fill only the valid values into the primary pencil marks.</string>
    <string name="highlight_similar_cells">Highlight same value cells</string>
    <string name="highlight_similar_cells_summary">Highlight cells with the same value as the selected cell.</string>
    <string name="validate_pencil_marks_title">Highlight clearly wrong pencil marks</string>
    <string name="validate_pencil_marks_summary">Highlights pencil marks that break basic Sudoku rules (value already in row, column, or box).</string>
    <string name="bidirectional_selection">Bidirectional selection</string>
    <string name="bidirectional_selection_summary">In the \'Insert on cell tap\' input mode, tapping a non-editable cell automatically selects the cell\'s value
        button.
    </string>
    <string name="primary_color_title">Primary color</string>
    <string name="primary_color_summary">Select primary color for menus, buttons, etc.</string>
    <string name="cell_border">Cell border</string>
    <string name="box_border">Box border</string>
    <string name="cell_value_title">Cell value</string>
    <string name="even_box_given_cell_value">Even box given cell value</string>
    <string name="even_box_given_cell_background">Even box given cell background</string>
    <string name="pencil_marks_text">Pencil mark text</string>
    <string name="pencil_marks_background">Pencil mark background</string>
    <string name="background">Background</string>
    <string name="highlight_similar_marks">Highlight same value pencil marks</string>
    <string name="highlight_similar_marks_summary">Highlight pencil marks with an equal value as the selected cell</string>
    <string name="resume">Resume</string>
    <string name="puzzle_lists">Puzzle Lists</string>
    <string name="remove_marks_title">Remove pencil marks on number entry</string>
    <string name="remove_marks_summary">Automatically remove pencil marks of the entered value from the same column, row, and box.</string>
    <string name="show_puzzle_lists_on_startup_title">Show puzzle lists on startup</string>
    <string name="show_puzzle_lists_on_startup_summary">Show puzzle lists on startup and skip the title screen.</string>
    <string name="ui_mode_title">Interface Mode</string>
    <string name="pref_border_title">Cell borders</string>
    <string name="pref_border_summary">Border colors around cells and 3x3 boxes.</string>
    <string name="pref_touched_title">Touched cells</string>
    <string name="pref_touched_summary">Cells in the “selection cross”.</string>
    <string name="pref_selected_title">Selected cell</string>
    <string name="pref_selected_summary">The selected cell\’s focus indicator.</string>
    <string name="pref_highlighted_title">Highlighted</string>
    <string name="pref_highlighted_summary">Cells/marks with the highlighted value.</string>
    <string name="pref_error_title">Invalid values</string>
    <string name="pref_error_summary">Cells containing invalid values.</string>
    <string name="pref_even_title">Even boxes cells</string>
    <string name="pref_even_summary">Cells in even-numbered 3x3 boxes.</string>
    <string name="import_strategy_title">Import strategy</string>
    <string name="import_strategy_summary">Define import strategy</string>
    <string name="show_mistake_counter_summary">Show number of incorrect inputs and hints showed during solving the puzzle.</string>
    <string name="show_mistake_counter">Show mistake and hint counters</string>
    <string name="highlight_wrong_values">Highlight cells with wrong values</string>
    <string name="play_random_puzzle">Play random puzzle</string>
    <string name="pref_enable_even_box_coloring_title">Enable Even/Odd Box coloring</string>
    <string name="pref_enable_even_box_coloring_summary">Apply custom colors to alternating boxes</string>
    <string name="given_value_digits">Given cell value digits</string>
    <string name="cell_coloring">Cell Coloring</string>
    <string name="background_colors_title">Modify Cell Coloring Colors</string>
    <string name="enable_background_colors">Enable cell coloring</string>
    <string name="enable_background_colors_summary">Enables a fourth edit mode to paint cell backgrounds using the custom colors set.</string>
    <string name="colors">Colors</string>
    <string name="board_symbols">Board symbols</string>
    <string name="select_the_character_set_to_use">Select the character set to use</string>
    <string name="select_which_types_of_pencil_marks_you_want_to_enable">Select which types of pencil marks you want to enable</string>
    <string name="enable_input_modes">Enable input modes</string>
    <string name="enable_input_modes_you_want_to_use">Enable input modes you want to use</string>
    <string name="choose_which_input_modes_do_you_want_to_be_able_to_switch_between_during_the_game_play">Choose which input modes do you want to be able to switch between during the game play.</string>
    <string name="editable_cells">Editable cells</string>
</resources>