<?xml version="1.0" encoding="utf-8"?><!--
  ~ This file is part of Open Sudoku - an open-source Sudoku game.
  ~ Copyright (C) 2009-2026 by Open Sudoku authors.
  ~
  ~ This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the
  ~ Free Software Foundation, either version 3 of the License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
  ~ FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">
	<PreferenceCategory
		android:title="@string/colors"
		app:iconSpaceReserved="false">
		<ListPreference
			android:key="ui_mode"
			android:title="@string/ui_mode_title"
			android:dialogTitle="@string/ui_mode_title"
			android:entries="@array/ui_mode_names"
			android:entryValues="@array/ui_mode_codes"
			android:defaultValue="system"
			app:useSimpleSummaryProvider="true"
			app:iconSpaceReserved="false"
			/>
		<ListPreference
			android:key="light_theme"
			android:title="@string/light_theme"
			android:entries="@array/light_theme_names"
			android:entryValues="@array/light_theme_codes"
			android:defaultValue="opensudoku"
			android:widgetLayout="@layout/preference_widget_light"
			app:useSimpleSummaryProvider="true"
			app:iconSpaceReserved="false"
			/>
		<ListPreference
			android:key="dark_theme"
			android:title="@string/dark_theme"
			android:entries="@array/dark_theme_names"
			android:entryValues="@array/dark_theme_codes"
			android:defaultValue="amoled"
			android:widgetLayout="@layout/preference_widget_dark"
			app:useSimpleSummaryProvider="true"
			app:iconSpaceReserved="false"
			/>
	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/board_view_settings"
		app:iconSpaceReserved="false">
		<SwitchPreference
			app:iconSpaceReserved="false"
			android:key="highlight_similar_cells"
			android:title="@string/highlight_similar_cells"
			android:summary="@string/highlight_similar_cells_summary"
			android:defaultValue="true"
			/>
		<ListPreference
			app:iconSpaceReserved="false"
			android:key="highlight_similar_marks_mode"
			android:title="@string/highlight_similar_marks"
			android:dialogTitle="@string/highlight_similar_marks_summary"
			android:entries="@array/highlight_similar_marks_entries"
			android:entryValues="@array/highlight_similar_marks_modes"
			android:defaultValue="values"
			app:useSimpleSummaryProvider="true"
			android:dependency="highlight_similar_cells"
			/>
		<ListPreference
			android:key="highlight_wrong_values_mode"
			android:title="@string/highlight_wrong_values"
			android:dialogTitle="@string/highlight_wrong_values_summary"
			android:entries="@array/highlight_wrong_values_entries"
			android:entryValues="@array/highlight_wrong_values_modes"
			android:defaultValue="indirect"
			app:useSimpleSummaryProvider="true"
			app:iconSpaceReserved="false"
			/>
		<SwitchPreference
			android:key="validate_pencil_marks"
			android:title="@string/validate_pencil_marks_title"
			android:summary="@string/validate_pencil_marks_summary"
			android:defaultValue="false"
			app:iconSpaceReserved="false"
			/>
		<SwitchPreference
			android:key="highlight_touched_cell"
			android:title="@string/highlight_touched_cell"
			android:summary="@string/highlight_touched_cell_summary"
			android:defaultValue="true"
			app:iconSpaceReserved="false"
			/>
		<ListPreference
			android:title="@string/enable_double_marks"
			android:key="double_marks_mode"
			android:summary="@string/enable_double_marks_summary"
			android:dialogTitle="@string/select_which_types_of_pencil_marks_you_want_to_enable"
			android:entries="@array/double_pencil_marks_entries"
			android:entryValues="@array/double_pencil_marks_values"
			android:defaultValue="corner"
			app:iconSpaceReserved="false"
			/>
		<ListPreference
			android:title="@string/board_symbols"
			android:key="display_font_selector"
			android:dialogTitle="@string/select_the_character_set_to_use"
			android:entries="@array/display_font_entries"
			android:entryValues="@array/display_font_values"
			android:defaultValue="123456789"
			app:iconSpaceReserved="false"
			android:summary="%s"
			/>
		<SwitchPreference
			android:key="background_color_enabled"
			android:title="@string/enable_background_colors"
			android:summary="@string/enable_background_colors_summary"
			android:defaultValue="true"
			app:iconSpaceReserved="false"
			/>
		<SeekBarPreference
			app:iconSpaceReserved="false"
			android:key="screen_border_size"
			android:title="@string/screen_border_size"
			android:dialogTitle="@string/screen_border_size"
			android:summary="@string/screen_border_size_summary"
			app:showSeekBarValue="true"
			android:max="30"
			android:min="0"
			android:defaultValue="0"
			/>
	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/input_methods"
		app:iconSpaceReserved="false">
		<MultiSelectListPreference
			android:key="selected_input_modes"
			android:title="@string/enable_input_modes"
			android:dialogTitle="@string/enable_input_modes_you_want_to_use"
			android:summary="@string/choose_which_input_modes_do_you_want_to_be_able_to_switch_between_during_the_game_play"
			android:entries="@array/input_modes_entries"
			android:entryValues="@array/input_modes_values"
			android:defaultValue="@array/input_modes_values"
			app:useSimpleSummaryProvider="true"
			app:iconSpaceReserved="false"
			/>
		<SwitchPreference
			android:key="remove_marks_on_input"
			android:title="@string/remove_marks_title"
			android:summary="@string/remove_marks_summary"
			android:defaultValue="true"
			app:iconSpaceReserved="false"
			/>
		<SwitchPreference
			android:key="highlight_completed_values"
			android:title="@string/highlight_completed_values"
			android:summary="@string/highlight_completed_values_summary"
			android:defaultValue="true"
			app:iconSpaceReserved="false"
			/>
		<SwitchPreference
			android:key="show_number_totals"
			android:title="@string/show_number_totals"
			android:summary="@string/show_number_totals_summary"
			android:defaultValue="false"
			app:iconSpaceReserved="false"
			/>
		<SwitchPreference
			android:key="bidirectional_selection"
			android:title="@string/bidirectional_selection"
			android:summary="@string/bidirectional_selection_summary"
			android:defaultValue="true"
			app:iconSpaceReserved="false"
			/>
		<SwitchPreference
			android:key="im_move_right_on_insert_move_right"
			android:title="@string/move_right_on_insert"
			android:summary="@string/move_right_on_insert_summary"
			android:defaultValue="false"
			app:iconSpaceReserved="false"
			/>
	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/game"
		app:iconSpaceReserved="false">
		<SwitchPreference
			android:key="show_hints"
			android:title="@string/show_hints"
			android:summary="@string/show_hints_summary"
			android:defaultValue="true"
			app:iconSpaceReserved="false"
			/>
		<SwitchPreference
			android:key="fill_in_marks_enabled"
			android:title="@string/fill_in_valid_marks_option"
			android:summary="@string/fill_in_valid_marks_summary"
			android:defaultValue="false"
			app:iconSpaceReserved="false"
			/>
		<SwitchPreference
			android:key="show_time"
			android:title="@string/show_time"
			android:summary="@string/show_time_summary"
			android:defaultValue="true"
			app:iconSpaceReserved="false"
			/>
		<SwitchPreference
			android:key="show_mistake_counter"
			android:title="@string/show_mistake_counter"
			android:summary="@string/show_mistake_counter_summary"
			android:defaultValue="true"
			app:iconSpaceReserved="false"
			/>
		<ListPreference
			android:key="import_strategy"
			android:title="@string/import_strategy_title"
			android:dialogTitle="@string/import_strategy_summary"
			android:entries="@array/import_strategy_list_texts"
			android:entryValues="@array/import_strategy_list_keys"
			android:defaultValue="nodup"
			app:useSimpleSummaryProvider="true"
			app:iconSpaceReserved="false"
			/>
		<SwitchPreference
			android:key="show_puzzle_lists_on_startup"
			android:title="@string/show_puzzle_lists_on_startup_title"
			android:summary="@string/show_puzzle_lists_on_startup_summary"
			android:defaultValue="false"
			app:iconSpaceReserved="false"
			/>
		<MultiSelectListPreference
			android:key="experimental_features_v2"
			android:title="@string/experimental_features"
			android:summary="@string/experimental_features_summary"
			android:entries="@array/experimental_features_entries"
			android:entryValues="@array/experimental_features_values"
			app:useSimpleSummaryProvider="true"
			app:iconSpaceReserved="false"
			/>
	</PreferenceCategory>
</PreferenceScreen>
