<?xml version="1.0" encoding="utf-8"?><!--
  ~ This file is part of Open Sudoku - an open-source Sudoku game.
  ~ Copyright (C) 2009-2026 by Open Sudoku authors.
  ~
  ~ This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the
  ~ Free Software Foundation, either version 3 of the License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
  ~ FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<!--suppress AndroidUnknownAttribute -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	>
	<org.moire.opensudoku.gui.ThemeColorPreference
		android:key="custom_light_base_theme"
		android:title="@string/primary_color_title"
		android:summary="@string/primary_color_summary"
		app:iconSpaceReserved="false"
		/>

	<PreferenceCategory
		android:summary="@string/pref_border_summary"
		android:title="@string/pref_border_title"
		app:iconSpaceReserved="false"
		>
		<net.margaritov.preference.colorpicker.ColorPickerPreference
			alphaSlider="true"
			hexValue="true"
			android:key="custom_light_theme_colorLine"
			android:title="@string/cell_border"
			app:iconSpaceReserved="false"
			/>

		<net.margaritov.preference.colorpicker.ColorPickerPreference
			alphaSlider="true"
			hexValue="true"
			android:key="custom_light_theme_colorSectorLine"
			android:title="@string/box_border"
			app:iconSpaceReserved="false"
			/>
	</PreferenceCategory>

	<PreferenceCategory
		android:title="@string/editable_cells"
		app:iconSpaceReserved="false"
		>
		<net.margaritov.preference.colorpicker.ColorPickerPreference
			alphaSlider="true"
			hexValue="true"
			android:key="custom_light_theme_colorValueText"
			android:title="@string/cell_value_title"
			app:iconSpaceReserved="false"
			/>

		<net.margaritov.preference.colorpicker.ColorPickerPreference
			alphaSlider="true"
			hexValue="true"
			android:key="custom_light_theme_colorMarksText"
			android:title="@string/pencil_marks_text"
			app:iconSpaceReserved="false"
			/>

		<net.margaritov.preference.colorpicker.ColorPickerPreference
			alphaSlider="true"
			hexValue="true"
			android:key="custom_light_theme_colorBackground"
			android:title="@string/background"
			app:iconSpaceReserved="false"
			/>
	</PreferenceCategory>

	<PreferenceCategory
		android:title="@string/given_value_digits"
		app:iconSpaceReserved="false"
		>
		<net.margaritov.preference.colorpicker.ColorPickerPreference
			alphaSlider="true"
			hexValue="true"
			android:key="custom_light_theme_colorGivenValueText"
			android:title="@string/cell_value_title"
			app:iconSpaceReserved="false"
			/>

		<net.margaritov.preference.colorpicker.ColorPickerPreference
			alphaSlider="true"
			hexValue="true"
			android:key="custom_light_theme_colorGivenValueBackground"
			android:title="@string/background"
			app:iconSpaceReserved="false"
			/>
	</PreferenceCategory>

	<PreferenceCategory
		android:summary="@string/pref_touched_summary"
		android:title="@string/pref_touched_title"
		app:iconSpaceReserved="false"
		>
		<net.margaritov.preference.colorpicker.ColorPickerPreference
			alphaSlider="true"
			hexValue="true"
			android:key="custom_light_theme_colorTouchedText"
			android:title="@string/cell_value_title"
			app:iconSpaceReserved="false"
			/>

		<net.margaritov.preference.colorpicker.ColorPickerPreference
			alphaSlider="true"
			hexValue="true"
			android:key="custom_light_theme_colorTouchedMarksText"
			android:title="@string/pencil_marks_text"
			app:iconSpaceReserved="false"
			/>

		<net.margaritov.preference.colorpicker.ColorPickerPreference
			alphaSlider="true"
			hexValue="true"
			android:key="custom_light_theme_colorTouchedBackground"
			android:title="@string/background"
			app:iconSpaceReserved="false"
			/>
	</PreferenceCategory>

	<PreferenceCategory
		android:summary="@string/pref_selected_summary"
		android:title="@string/pref_selected_title"
		app:iconSpaceReserved="false"
		>
		<net.margaritov.preference.colorpicker.ColorPickerPreference
			alphaSlider="true"
			hexValue="true"
			android:key="custom_light_theme_colorSelectedBackground"
			android:title="@string/background"
			app:iconSpaceReserved="false"
			/>
	</PreferenceCategory>

	<PreferenceCategory
		android:summary="@string/pref_highlighted_summary"
		android:title="@string/pref_highlighted_title"
		app:iconSpaceReserved="false"
		>
		<net.margaritov.preference.colorpicker.ColorPickerPreference
			alphaSlider="true"
			hexValue="true"
			android:key="custom_light_theme_colorHighlightedText"
			android:title="@string/cell_value_title"
			app:iconSpaceReserved="false"
			/>

		<net.margaritov.preference.colorpicker.ColorPickerPreference
			alphaSlider="true"
			hexValue="true"
			android:key="custom_light_theme_colorHighlightedBackground"
			android:title="@string/background"
			app:iconSpaceReserved="false"
			/>

		<net.margaritov.preference.colorpicker.ColorPickerPreference
			alphaSlider="true"
			hexValue="true"
			android:key="custom_light_theme_colorHighlightedMarksText"
			android:title="@string/pencil_marks_text"
			app:iconSpaceReserved="false"
			/>

		<net.margaritov.preference.colorpicker.ColorPickerPreference
			alphaSlider="true"
			hexValue="true"
			android:key="custom_light_theme_colorHighlightedMarksBackground"
			android:title="@string/pencil_marks_background"
			app:iconSpaceReserved="false"
			/>
	</PreferenceCategory>

	<PreferenceCategory
		android:summary="@string/pref_error_summary"
		android:title="@string/pref_error_title"
		app:iconSpaceReserved="false"
		>

		<net.margaritov.preference.colorpicker.ColorPickerPreference
			alphaSlider="true"
			hexValue="true"
			android:key="custom_light_theme_colorTextError"
			android:title="@string/cell_value_title"
			app:iconSpaceReserved="false"
			/>

		<net.margaritov.preference.colorpicker.ColorPickerPreference
			alphaSlider="true"
			hexValue="true"
			android:key="custom_light_theme_colorBackgroundError"
			android:title="@string/background"
			app:iconSpaceReserved="false"
			/>
	</PreferenceCategory>

	<!-- Category for "Even/Odd Box Shading" -->
	<PreferenceCategory
		android:summary="@string/pref_even_summary"
		android:title="@string/pref_even_title"
		app:iconSpaceReserved="false"
		>

		<CheckBoxPreference
			android:defaultValue="false"
			android:key="pref_enable_even_box_coloring_light"
			android:summary="@string/pref_enable_even_box_coloring_summary"
			android:title="@string/pref_enable_even_box_coloring_title"
			app:iconSpaceReserved="false"
			/>

		<net.margaritov.preference.colorpicker.ColorPickerPreference
			alphaSlider="true"
			hexValue="true"
			android:key="custom_light_theme_colorEvenText"
			android:title="@string/cell_value_title"
			app:iconSpaceReserved="false"
			/>

		<net.margaritov.preference.colorpicker.ColorPickerPreference
			alphaSlider="true"
			hexValue="true"
			android:key="custom_light_theme_colorEvenMarksText"
			android:title="@string/pencil_marks_text"
			app:iconSpaceReserved="false"
			/>

		<net.margaritov.preference.colorpicker.ColorPickerPreference
			alphaSlider="true"
			hexValue="true"
			android:key="custom_light_theme_colorEvenBackground"
			android:title="@string/background"
			app:iconSpaceReserved="false"
			/>

		<net.margaritov.preference.colorpicker.ColorPickerPreference
			alphaSlider="true"
			hexValue="true"
			android:key="custom_light_theme_colorEvenGivenValueText"
			android:title="@string/even_box_given_cell_value"
			app:iconSpaceReserved="false"
			/>

		<net.margaritov.preference.colorpicker.ColorPickerPreference
			alphaSlider="true"
			hexValue="true"
			android:key="custom_light_theme_colorEvenGivenValueBackground"
			android:title="@string/even_box_given_cell_background"
			app:iconSpaceReserved="false"
			/>
	</PreferenceCategory>

	<PreferenceCategory
		android:title="@string/cell_coloring"
		app:iconSpaceReserved="false"
		>
		<Preference
			android:key="custom_light_background_colors"
			android:title="@string/background_colors_title"
			app:iconSpaceReserved="false"
			/>
	</PreferenceCategory>
</PreferenceScreen>
