<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This file is part of Open Sudoku - an open-source Sudoku game.
  ~ Copyright (C) 2026 by Open Sudoku authors.
  ~
  ~ This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the
  ~ Free Software Foundation, either version 3 of the License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
  ~ FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingStart="24dp"
		android:paddingEnd="24dp"
		android:paddingTop="8dp"
		android:paddingBottom="8dp">

		<CheckBox
			android:id="@+id/filter_not_started"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/not_started"
			android:minHeight="48dp" />

		<CheckBox
			android:id="@+id/filter_playing"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/playing"
			android:minHeight="48dp" />

		<CheckBox
			android:id="@+id/filter_solved"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/solved"
			android:minHeight="48dp" />

		<TextView
			android:id="@+id/filter_and_also_label"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/filter_and_also"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:paddingTop="12dp"
			android:paddingBottom="4dp"
			android:paddingStart="8dp"
			android:paddingEnd="8dp"
			android:textStyle="bold" />

		<CheckBox
			android:id="@+id/filter_with_mistakes"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/with_mistakes"
			android:minHeight="48dp" />

		<CheckBox
			android:id="@+id/filter_with_hints"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/with_hints"
			android:minHeight="48dp" />

	</LinearLayout>
</ScrollView>
