<!--
  ~ This file is part of Open Sudoku - an open-source Sudoku game.
  ~ Copyright (C) 2009-2025 by Open Sudoku authors.
  ~
  ~ This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the
  ~ Free Software Foundation, either version 3 of the License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
  ~ FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->
<merge xmlns:android="http://schemas.android.com/apk/res/android">
	<Button
		android:id="@+id/challenge_button"
		style="@style/AppTheme.TextButton"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:visibility="gone"
		/>

	<Button
		android:id="@+id/resume_button"
		android:text="@string/resume"
		style="@style/AppTheme.TextButton"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:visibility="gone"
		/>

	<Button
		android:id="@+id/random_unsolved_button"
		android:text="@string/play_random_puzzle"
		style="@style/AppTheme.TextButton"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		/>

	<Button
		android:id="@+id/puzzle_lists_button"
		android:text="@string/puzzle_lists"
		style="@style/AppTheme.TextButton"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		/>

	<Button
		android:id="@+id/settings_button"
		android:text="@string/settings"
		style="@style/AppTheme.TextButton"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		/>
</merge>
